# firv

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: stage-cli.mjs  sync-version.mjs
src/: App.css  App.rename.test.tsx  App.tsx  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: beforeRunStep.ts  firvRequest.ts  hydratedTree.ts  requestChainStep.ts  sidebarItem.ts  workspace.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hydration.rs  lib.rs  lifecycle.rs  main.rs  mcp_server.rs  mcp_tools.rs  request_engine.rs  runner.rs  scratchpad.rs  scripting.rs  storage.rs  variables.rs  watcher.rs  ws_client.rs
src-tauri/src/bindings/: FirvManifest.ts  FolderScripts.ts  SidebarItem.ts  Workspace.ts
src-tauri/src/models/: manifest.rs  mod.rs  request.rs  ws_request.rs
src-tauri/src/scripting/: api.rs  mod.rs
src-tauri/src/variables/: uuid_filter.rs
src/components/: AppSettings.tsx  ClipboardInput.tsx  ErrorBoundary.tsx  InputModal.tsx  LogDrawer.tsx  MenuSidebar.tsx  RequestEditor.bodySection.test.tsx  RequestEditor.commandBar.test.tsx  RequestEditor.integration.test.tsx  RequestEditor.transformsSection.test.tsx  RequestEditor.tsx  RequestEditorBodySection.tsx  RequestEditorCommandBar.tsx  RequestEditorTransformsSection.tsx  ResponseViewer.test.tsx  ResponseViewer.tsx  Sidebar.tsx  ThemeProvider.tsx  UpdatePrompt.tsx  VariablePlaceholder.tsx  WindowControls.tsx  WorkspaceScriptDrawer.tsx  WorkspaceSettings.tsx  WsConsole.tsx  WsEditor.tsx  requestEditorUtils.test.ts  requestEditorUtils.ts
src/hooks/: useNativeContextMenu.ts
src/lib/: clipboard.ts  updaterClient.ts  variableHover.test.ts  variableHover.ts  wsClient.test.ts  wsClient.ts
src/store/: appStore.ts  modalStore.ts  sidebarStore.export-import.test.ts  sidebarStore.rename.test.ts  sidebarStore.ts  themeStore.ts  updateStore.ts
src/test/: setup.ts
src/types/: chainCondition.ts  environment.ts  extractionSource.ts  firvManifest.ts  firvRequest.ts  httpMethod.ts  hydratedSidebarItem.ts  keyValue.ts  requestBody.ts  requestExtractionRule.ts  requestTransforms.ts  scriptConfig.ts  sidebarItem.ts  sidebarKind.ts  workspace.ts  wsRequest.ts
src/workers/: responseWorker.test.ts  responseWorker.ts
(+7 files in other folders)
