[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
ts-rs = "12.0.1"
serde_yaml = "0.9.34"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-recursion = "1.1.1"
regex = "1.12.3"
rquickjs = { version = "0.11.0", features = ["macro", "bindgen"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
